[tool.poetry]
name = "titanic-multivariate-analysis"
version = "0.1.0"
description = ""
authors = ["Gustavo de Souza Gonçalves <goncalves.gustavo211@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
statsmodels = "^0.13.2"
sklearn = "^0.0"
pandas = "^1.4.2"
numpy = "^1.22.3"
seaborn = "^0.11.2"
jupyterlab = "^3.4.2"
sweetviz = "^2.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
